# refresh

./: .editorconfig  .gitignore  .golangci.yml  .goreleaser.yml  .nancy-ignore  AWS_SDK_OPPORTUNITIES.md  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CONTRIBUTING.md  DESIGN.md  FEATURES.md  IMPLEMENTATION.md  README.md  SECURITY.md  TESTING.md  Taskfile.yml  go.mod  go.sum  ideas.md  main.go  main_test.go  mkdocs.yml  pyproject.toml  release-please-config.json
.github/: dependabot.yml
.github/workflows/: auto-merge.yml  auto-release.yml  claude-code-review.yml  claude.yml  docs.yml  lint.yml  release-please.yml  release.yml  security.yml  test.yml
docs/: changelog.md  index.md  migration.md
docs/commands/: addon.md  cluster.md  contexts.md  index.md  nodegroup.md  status.md  utility.md
docs/concepts/: configuration.md  contexts.md  exit-codes.md  lifecycle.md  output.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: addon.md  cluster.md  completion.md  context.md  current.md  index.md  install-man.md  nodegroup.md  status.md  use.md  version.md
docs/usage/: cookbook.md
features/: TODO.md
features/phase1/: advanced-nodegroup-management.md  eks-addons-management.md  enhanced-cluster-operations.md
features/templates/: feature-template.md
internal/aws/: ami.go  ami_test.go  cluster.go  cluster_test.go  errors.go  errors_test.go  nodegroup.go  nodegroup_test.go  paginate.go  paginate_test.go
release-notes/: v0.1.3.md  v0.1.4.md  v0.1.5.md  v0.1.6.md  v0.1.7.md  v0.1.8.md  v0.1.9.md  v0.2.0.md  v0.2.1.md  v0.2.2.md  v1.1.6.md
(+264 files in other folders)
